<resources>
    <string name="app_name">GAMD</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register_user">Crear cuenta</string>
    <string name="title_activity_recover_password">Recuperar contraseña</string>
    <string name="title_activity_main">GAMD</string>
    <string name="title_activity_seek_medical_attention">Solicitar Atención Médica</string>
    <string name="title_activity_appointment_attention">Atender Citas</string>
    <string name="title_fragment_notification">Notificaciones</string>
    <string name="title_fragment_compartir">Compartir</string>
    <string name="title_fragment_contacto">Contacto</string>
    <string name="title_fragment_acerca">Acerca</string>
    <string name="title_fragment_salir">Salir</string>

    <string name="Imagen">Imagen</string>

    <!-- Nombres de los items -->
    <string-array name="nav_drawer_items">
        <item>Solicitar Consulta</item>
        <item>Registrar Consulta</item>
        <item>Visualizar Consultas</item>
        <item>Asignar Consulta</item>
        <item>Actualizar Datos</item>
        <item>Descargar Reporte</item>
        <item>Salir</item>
    </string-array>

    <!-- Iconos de los items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
    </array>

    <!-- Nombres de los Horario -->
    <string-array name="tipo_horario_items">
        <item>En este momento</item>
        <item>6:00 am - 8:00 am</item>
        <item>8:00 am - 10:00 am</item>
        <item>10:00 am - 12:00 pm</item>
        <item>12:00 pm - 2:00 pm</item>
        <item>2:00 pm - 4:00 pm</item>
        <item>4:00 pm - 6:00 pm</item>
        <item>6:00 pm - 8:00 pm</item>
        <item>8:00 pm - 10:00 pm</item>
        <item>10:00 pm - 12:00 am</item>
        <item>12:00 am - 2:00 am</item>
        <item>2:00 am - 4:00 am</item>
        <item>4:00 am - 6:00 am</item>
    </string-array>
    <string name="Horario_1">En este momento</string>
    <string name="Horario_2">6:00 am - 8:00 am</string>
    <string name="Horario_3">8:00 am - 10:00 am</string>
    <string name="Horario_4">10:00 am - 12:00 pm</string>
    <string name="Horario_5">12:00 pm - 2:00 pm</string>
    <string name="Horario_6">2:00 pm - 4:00 pm</string>
    <string name="Horario_7">4:00 pm - 6:00 pm</string>
    <string name="Horario_8">6:00 pm - 8:00 pm</string>
    <string name="Horario_9">8:00 pm - 10:00 pm</string>
    <string name="Horario_10">10:00 pm - 12:00 am</string>
    <string name="Horario_11">12:00 am - 2:00 am</string>
    <string name="Horario_12">2:00 am - 4:00 am</string>
    <string name="Horario_13">4:00 am - 6:00 am</string>

    <string name="Uno">1</string>
    <string name="Dos">2</string>
    <string name="Tres">3</string>
    <string name="Cuatro">4</string>
    <string name="Cinco">5</string>

    <!-- Nombres de los Tipos de Servicios -->
    <string-array name="tipo_servicio_items">
        <item>Tipo Servicio 01</item>
        <item>Tipo Servicio 02</item>
    </string-array>
    <string name="Tipo_Servicio_1">Tipo Servicio 01</string>
    <string name="Tipo_Servicio_2">Tipo Servicio 02</string>

    <!-- Nombres de los Especialidades -->
    <string-array name="especialidad_items">
        <item>Especialidad 01</item>
        <item>Especialidad 02</item>
        <item>Especialidad 03</item>
        <item>Especialidad 04</item>
        <item>Especialidad 05</item>
    </string-array>
    <string name="Especialidad_1">Especialidad 01</string>
    <string name="Especialidad_2">Especialidad 02</string>
    <string name="Especialidad_3">Especialidad 03</string>
    <string name="Especialidad_4">Especialidad 04</string>
    <string name="Especialidad_5">Especialidad 05</string>

    <!-- Nombres de los Servicios -->
    <string-array name="servicio_items">
        <item>Servicio 01</item>
        <item>Servicio 02</item>
        <item>Servicio 03</item>
        <item>Servicio 04</item>
    </string-array>
    <string name="Servicio_1">Servicio 01</string>
    <string name="Servicio_2">Servicio 02</string>
    <string name="Servicio_3">Servicio 03</string>
    <string name="Servicio_4">Servicio 04</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="imagenLeft">Left</string>
    <string name="imagenRight">Right</string>
    <string name="NumeroAsociado">Username</string>
    <string name="Correo">Correo</string>
    <string name="Clave">Contraseña</string>
    <string name="Direccion">Dirección</string>
    <string name="ElijaFecha">Elija Fecha</string>
    <string name="FechaAtencion">Fecha Atención</string>
    <string name="Hora_Servicio">Hora de Atención</string>
    <string name="Direccion_Atencion">Dirección donde voy a atenderme</string>
    <string name="Sintomas">Síntomas</string>
    <string name="Ingrese_Sintomas">Ingrese síntomas</string>
    <string name="Direccion_Destino">Dirección de Destino</string>
    <string name="Tipo_Servicio">Tipo de Servicio</string>
    <string name="Especialidad">Especialidad</string>
    <string name="Icono">Icono</string>
    <string name="Ninguno">Ninguno</string>
    <string name="Servicio">Servicio</string>
    <string name="Buscando_Direccion">Buscando dirección...</string>
    <string name="Logo">Logo</string>
    <string name="Entrar">Entrar</string>
    <string name="Ubicanos">Ubícanos</string>
    <string name="Titulo">Gestión de Atención Médica a Dominicilio</string>
    <string name="Titulo_Corto">Atención Médica a Dominicilio</string>
    <string name="Email_Admin">admin@gamd.com</string>
    <string name="Contactanos">Contáctanos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Salir">Salir</string>
    <string name="drawer_open">Se abrio el menu lateral</string>
    <string name="drawer_close">Se cerro el menu lateral</string>
    <string name="gcm_send_message">Token recuperado y enviado al servidor! Ahora puede utilizar GCM remitente para enviar mensajes posteriores a esta aplicación.</string>
    <string name="registering_message">Contador de generación InstanceID...</string>
    <string name="token_error_message">Se ha producido un error al ir a buscar ya sea el token de Notificaciones.</string>
    <string name="Olvido_Clave">Olvidé mi contraseña</string>
    <string name="Crear_Nueva_Cuenta">Crear nueva cuenta</string>
    <string name="Olvido_Clave_Subrayado"><u>Olvidé mi contraseña</u></string>
    <string name="Solicitar">Solicitar</string>
    <string name="SolicitudAceptada">Solicitud Aceptada</string>
    <string name="ZonaNotificacion">Notificaciones</string>
    <string name="Pedir_Aqui">Pedir aquí</string>
    <string name="title_activity_maps">Map</string>
    <string name="Vacio">Vacio</string>
    <string name="NoHayNotificaciones">No hay notificaicones</string>
    <string name="Cancelar_Cita">Cancelar Cita</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Solicitud_Pendiente">Solicitud Pendiente</string>
    <string name="Confirmar_Llegada">Confirmar Llegada</string>
    <string name="Finalizar_Servicio">Finalizar Servicio</string>
    <string name="Finalizar_Servicio_Capital">FINALIZAR SERVICIO</string>
    <string name="Esta_seguro_llegada">¿Está seguro que desea confirmar su llegada?</string>
    <string name="Esta_seguro_finalizar">¿Está seguro que desea Finalizar el servicio?</string>
    <string name="Confirmación">Confirmación</string>
    <string name="Esta_seguro_confirmacion">¿Está seguro de cancelar la cita?</string>
    <string name="Solicitudes_Pendientes">Solicitudes Pendientes</string>
    <string name="Solicitudes_En_Curso">Solicitudes En Curso</string>
    <string name="Observaciones">Observaciones</string>
    <string name="Ingrese_Observaciones">Ingrese sus observaciones</string>
    <string name="Encuesta_Servicio_Capital">ENCUESTA DEL SERVICIO</string>
    <string name="Mensaje_Subtitulo_Encuensta">Antes de terminar nuestra atención, por favor proceda a calificar nuestra atención</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_not_ready">Mapa no está disponible</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Se requiere acceso al servicio de localización para demostrar la \ característica de "mi ubicación \ ', que muestra su ubicación actual en el mapa.</string>
    <string name="location_permission_denied">Se requiere el permiso de ubicación</string>
    <string name="permission_required_toast">Permiso de ubicación denegado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direccion">Dirección</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="type_in_your_location">Ingresa tu ubicación</string>
    <string name="autocomplete_hint">Ingresa lugar o dirección</string>
    <string name="selected_place">Último lugar Seleccionado:</string>
    <string name="clear_text">Limpiar Texto</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
</resources>
