<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_seek"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/title_activity_seek_medical_attention" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_sms"
            android:title="@string/title_fragment_notification" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_fragment_compartir" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_mail"
                android:title="@string/title_fragment_contacto" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_sim_card_alert_24dp"
                android:title="@string/title_fragment_acerca" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_fragment_salir" />
        </menu>
    </item>

</menu>
