<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/AzulPandero"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/Finalizar_Servicio_Capital"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/Esta_seguro_finalizar"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtObservacion"
            android:hint="@string/Ingrese_Observaciones"
            android:lines="3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancelar"
            android:id="@+id/btnCancelarFinalizar"
            android:background="@color/colorPrimary"
            android:textColor="@color/Blanco"
            android:textStyle="bold"
            android:layout_weight=".4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="5dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight=".7" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Aceptar"
            android:id="@+id/btnAceptarFinalizar"
            android:background="@color/colorPrimary"
            android:textColor="@color/Blanco"
            android:textStyle="bold"
            android:layout_weight=".4"
            android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</LinearLayout>