<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/ic_action_place"
                    android:layout_weight=".1" />

                <TextView
                    android:id="@+id/lblDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Direccion"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textSize="@dimen/label_titulo_text_size"
                    android:layout_weight=".9"
                    android:gravity="left"
                    android:textIsSelectable="false" />

            </LinearLayout>


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDireccionS"
                android:hint="@string/Direccion_Atencion" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:text="@string/Vacio"
                android:id="@+id/btnFila1"
                android:background="@color/Negro" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/ic_action_select_all"
                    android:layout_weight=".1" />

                <TextView
                    android:id="@+id/lblTipoServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tipo_Servicio"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textSize="@dimen/label_titulo_text_size"
                    android:layout_weight=".9"
                    android:gravity="left" />

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spTipoServicio"
                android:background="@drawable/spinner_selector"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:text="@string/Vacio"
                android:id="@+id/btnFila2"
                android:background="@color/Negro" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/ic_action_select_all"
                    android:layout_weight=".1" />

                <TextView
                    android:id="@+id/lblEspecialidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Especialidad"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textSize="@dimen/label_titulo_text_size"
                    android:layout_weight=".9"
                    android:gravity="left" />

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spEspecialidad"
                android:background="@drawable/spinner_selector"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:text="@string/Vacio"
                android:id="@+id/btnFila3"
                android:background="@color/Negro" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/ic_action_select_all"
                    android:layout_weight=".1" />

                <TextView
                    android:id="@+id/lblServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Servicio"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textSize="@dimen/label_titulo_text_size"
                    android:layout_weight=".9"
                    android:gravity="left" />

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spServicio"
                android:background="@drawable/spinner_selector"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:text="@string/Vacio"
                android:id="@+id/btnFila4"
                android:background="@color/Negro" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/ic_action_edit"
                    android:layout_weight=".1" />

                <TextView
                    android:id="@+id/lblSintomas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintomas"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@color/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textSize="@dimen/label_titulo_text_size"
                    android:layout_weight=".9"
                    android:gravity="left" />

            </LinearLayout>


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSintomas"
                android:hint="@string/Ingrese_Sintomas" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:text="@string/Vacio"
                android:id="@+id/btnFila5"
                android:background="@color/Negro" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pedir_Aqui"
                android:id="@+id/btnSolicitar"
                android:background="@color/colorPrimary"
                android:textColor="@color/Blanco"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>