<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <fragment
                android:id="@+id/map"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                class="com.google.android.gms.maps.SupportMapFragment" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/imagenLeft"
                    android:src="@drawable/icon"
                    android:layout_weight=".1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/txtTitulo"
                    android:text="@string/Titulo_Corto"
                    android:textColor="@color/Negro"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_weight=".9" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbBusqueda" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="text"
                android:id="@+id/txtDireccion"
                android:textColor="@color/Negro"
                android:hint="@string/Buscando_Direccion"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10sp" />

        </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Solicitar"
                android:id="@+id/btnSolicitar"
                android:background="@color/colorPrimary"
                android:textColor="@color/Blanco"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
